<resources>
    <string name="app_name">MobileUSOZ</string>
    <string name="e_mail">e-mail</string>
    <string name="sign_in">Zaloguj</string>
    <string name="sign_up">Zarejestruj</string>
    <string name="password">hasło</string>
    <string name="facebook_app_id">391138904773778</string>
    <string name="fb_login_protocol_scheme">fb391138904773778</string>
    <string name="navigation_drawer_close">Zamknij menu</string>
    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="title_activity_log_in">Logowanie</string>
    <string name="title_activity_create_account">Rejestracja</string>
    <string name="title_activity_profile">Profil</string>
    <string name="title_activity_calendar">Kalendarz</string>
    <string name="title_activity_lecturers">Wykładowcy</string>
    <string name="title_activity_map">Mapa</string>
    <string name="title_activity_display_notes">Notatki</string>
    <string name="title_activity_add_note">Dodaj Notatkę</string>
    <string name="nav_header_title">MobileUSOZ</string>
    <string name="nav_header_subtitle">projectio2019@gmail.com</string>
    <string name="save_marker">Zapisz</string>
    <string name="delete_marker">Usuń</string>
    <string name="log_out">Wyloguj</string>
    <string name="hide_markers">Ukryj pinezki</string>
    <string name="show_markers">Pokaż pinezki</string>
    <string name="send">Wyślij</string>
    <string name="add_note">Dodaj Notatkę</string>

    <string name="you_re_logged_out">Zostałeś wylogowany</string>

    <string-array name="map_spinner_colors">
        <item>Rozrywka</item>
        <item>Nauka</item>
        <item>Kawiarnia</item>
        <item>Sport</item>
    </string-array>

    <string-array name="lecturers_grades">
        <item>--</item>
        <item>2</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
    </string-array>

</resources>