<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_activity_profile" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/title_activity_calendar" />
        <item
            android:id="@+id/nav_lecturers"
            android:icon="@drawable/ic_lecturers"
            android:title="@string/title_activity_lecturers" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map"
            android:title="@string/title_activity_map" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />
    </group>

</menu>