<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:id="@+id/log_in_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/included_toolbar"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/included_toolbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="70dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/PswdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTextView"
            android:layout_alignStart="@+id/loginTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/sign_in_linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/PswdTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="70dp"
            android:divider="@drawable/empty_thick_divider"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/logInButton"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:fontFamily="sans"
                android:textSize="16sp"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:fontFamily="sans"
                android:textSize="16sp"
                android:text="@string/sign_up"/>

        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_in_linear_layout_1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="75dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="75dp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fbLogin_button"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@+id/googleSignInButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="75dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>

    <include
        android:id="@+id/included_exit_layout"
        layout="@layout/exit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.v4.widget.DrawerLayout>